# TTK8

./: .gitignore  CMakeLists.txt  Kconfig  icarus-public.pem  prj.conf  sample.yaml
boards/: actinius_icarus_ns.overlay
cloud/: main.py  requirements.txt
include/: display_ssd16xx.h  gpio_button.h  gpio_led.h  gps_conn.h  gps_location.h  keys.h  mqtt.h  mqtt_service.h
src/: certificates.h  display_ssd16xx.c  gpio_button.c  gpio_led.c  gps_conn.c  gps_location.c  keys.c  main.c  mqtt.c  mqtt_service.c
